# bear-Schmidt

./: .gitignore  CITATION.cff  LICENSE  README.md  make_composite.py  pyproject.toml  requirements.txt
docs/: DEMO_A_EXPLAINER.md  DEMO_B_EXPLAINER.md  DEMO_C_EXPLAINER.md  DEMO_D_EXPLAINER.md  DEMO_E_EXPLAINER.md  DEMO_F_EXPLAINER.md
schmidt_demos/common/: __init__.py  colony.py  gene_schema.py  telemetry.py
schmidt_demos/demo_a_domain_general/: __init__.py  plot.py  plot_failure_mode.py  run.py  run_failure_mode_sweep.py  traits.yaml
schmidt_demos/demo_b_minicage_bridge/: __init__.py  compliance.py  defender.py  minicage_env.py  plot.py  run.py
schmidt_demos/demo_c_coevolution/: __init__.py  classification.py  multi_defender_compliance.py  paired_episode.py  plot.py  plot_paired.py  plot_phi_sweep.py  run.py  run_paired.py  seeding.py
schmidt_demos/demo_d_bear_advantage/: __init__.py  bear_retrieval_defender.py  corpus_builder.py  heritability.py  llm_blend.py  plot.py  run.py
schmidt_demos/demo_e_cage4/: __init__.py  cc4_env.py  compliance.py  defender.py  plot.py  run.py  traits.yaml
schmidt_demos/demo_f_llm_decision/: __init__.py  defender.py  directives.py  plot.py  run.py  traits.yaml
scripts/: bootstrap.sh  serve_llm.py  smoke_test_cc4.py  smoke_test_gemma_decision.py  smoke_test_minicage.py
